# TAAC_2026

./: .gitignore  docker-compose.yml  pyproject.toml
docker/: Dockerfile  entrypoint.sh
experiments/host_device_info/: runner.py
src/taac2026/application/bootstrap/: run_sh.py
tests/unit/application/bootstrap/: test_run_sh_runtime.py
